fix a centering issue with section-img on mobile

--- a/Half-Way-Task/styles.css
+++ b/Half-Way-Task/styles.css
@@ -283,9 +283,12 @@ textarea {
     display: block;
     width: 90%;
   }
-
+  .section-header {
+    margin: 0 20px;
+  }
   .section-img {
     width: 100%;
+    margin: 0 auto;
   }
   /* skills */
   .container-b {
